[gd_scene load_steps=17 format=3 uid="uid://3qcpl8l0xtfv"]

[ext_resource type="Script" path="res://scripts/system/system_ability_manager.gd" id="1_lvqtx"]
[ext_resource type="Script" path="res://scripts/system/system_character.gd" id="1_xxpcn"]
[ext_resource type="Script" path="res://scripts/system/system_attribute_manager.gd" id="2_c4tpm"]
[ext_resource type="Script" path="res://scripts/system/system_status_effect_manager.gd" id="3_lyog1"]
[ext_resource type="Script" path="res://scripts/system/system_attribute.gd" id="4_lidky"]
[ext_resource type="Script" path="res://scripts/system/system_character_movement.gd" id="5_3tpia"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="7_ntgwr"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="8_bfus3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_tree_state.gd" id="9_080gh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="10_co5u7"]
[ext_resource type="Texture2D" uid="uid://blnriaxis4dgv" path="res://assets/images/character_direction_ring.svg" id="11_gab2f"]

[sub_resource type="Resource" id="Resource_4q8ig"]
script = ExtResource("4_lidky")
name = "HP"
value = 1.0
min_value = 0.0
max_value = 1.0

[sub_resource type="Resource" id="Resource_2kasv"]
script = ExtResource("4_lidky")
name = "MoveSpeed"
value = 50.0
min_value = 0.0
max_value = 255.0

[sub_resource type="Resource" id="Resource_aqwx0"]
script = ExtResource("4_lidky")
name = "TurnSpeed"
value = 10.0
min_value = 0.0
max_value = 10.0

[sub_resource type="Resource" id="Resource_gemdh"]
script = ExtResource("4_lidky")
name = "Damage"
value = 0.0
min_value = 0.0
max_value = 0.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g5cmu"]
height = 0.363804
radius = 2.0

[node name="CharacterBase" type="CharacterBody3D" groups=["Character"]]
script = ExtResource("1_xxpcn")

[node name="AbilityManager" type="Node" parent="." node_paths=PackedStringArray("status_effect_manager")]
unique_name_in_owner = true
script = ExtResource("1_lvqtx")
status_effect_manager = NodePath("../StatusEffectManager")

[node name="AttributeManager" type="Node" parent="." node_paths=PackedStringArray("status_effects_map")]
unique_name_in_owner = true
script = ExtResource("2_c4tpm")
status_effects_map = NodePath("../StatusEffectManager")
attributes = Array[ExtResource("4_lidky")]([SubResource("Resource_4q8ig"), SubResource("Resource_2kasv"), SubResource("Resource_aqwx0"), SubResource("Resource_gemdh")])

[node name="StatusEffectManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_lyog1")

[node name="Movement" type="Node" parent="." node_paths=PackedStringArray("attribute_manager")]
unique_name_in_owner = true
script = ExtResource("5_3tpia")
attribute_manager = NodePath("../AttributeManager")

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_ntgwr")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("8_bfus3")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("9_080gh")
animation_tree = NodePath("../../../AnimationTree")
state_name = &"idle"

[node name="ToMove" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("10_co5u7")
to = NodePath("../../Move")
event = &"move"
delay_in_seconds = "0.0"

[node name="ToDeath" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("10_co5u7")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="ToHit" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("10_co5u7")
to = NodePath("../../Hit")
event = &"hit"
delay_in_seconds = "0.0"

[node name="Death" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("9_080gh")
animation_tree = NodePath("../../../AnimationTree")
state_name = &"death"

[node name="Hit" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("9_080gh")
animation_tree = NodePath("../../../AnimationTree")
state_name = &"hit"

[node name="ToMove" type="Node" parent="StateChart/CompoundState/Hit"]
script = ExtResource("10_co5u7")
to = NodePath("../../Move")
event = &"move"
delay_in_seconds = "0.0"

[node name="ToIdle" type="Node" parent="StateChart/CompoundState/Hit"]
script = ExtResource("10_co5u7")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="ToDeath" type="Node" parent="StateChart/CompoundState/Hit"]
script = ExtResource("10_co5u7")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="Move" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("9_080gh")
animation_tree = NodePath("../../../AnimationTree")
state_name = &"move"

[node name="ToIdle" type="Node" parent="StateChart/CompoundState/Move"]
script = ExtResource("10_co5u7")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="ToDeath" type="Node" parent="StateChart/CompoundState/Move"]
script = ExtResource("10_co5u7")
to = NodePath("../../Death")
event = &"death"
delay_in_seconds = "0.0"

[node name="ToHit" type="Node" parent="StateChart/CompoundState/Move"]
script = ExtResource("10_co5u7")
to = NodePath("../../Hit")
event = &"hit"
delay_in_seconds = "0.0"

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_g5cmu")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-8.74228e-09, 0.2, -8.74228e-09, 0, -8.74228e-09, -0.2, -0.2, -8.74228e-09, 3.82137e-16, 0, 0.01, 0)
offset = Vector2(80, -95)
texture = ExtResource("11_gab2f")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.198428, 0)
visible = false
light_specular = 10.0
omni_range = 0.79554
